--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@ nav span {
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 15px;
-  /* margin-bottom: -15px; */
   display: inline-block;
   vertical-align: middle;
 }
@@ -65,8 +64,8 @@ nav span {
   width: 39%;
   padding-right: 15px;
   text-align: right;
-  vertical-align: middle;
   display: inline-block;
+  vertical-align: middle;
 }
 
 .right-block a:hover {
@@ -76,14 +75,14 @@ nav span {
 .subnav-container {
   width: 100vw;
   min-width: 315px;
-  margin-bottom: 15px;
+  margin-bottom: 0px; /* 15px */
   background-image: linear-gradient(to bottom right, #0575E6, #021B79);
 }
 
 .subnav-wrap {
   width: 100vw;
   min-width: 315px;
-  height: 25vh;
+  height: 20vh; /* 25vh */
   background: url('/img/head-bg.png');
   background-repeat: no-repeat;
   background-size: cover;
@@ -94,8 +93,27 @@ nav span {
   box-shadow: 0px 20px 30px -15px #888888;
 }
 
+.subnav-title {
+  margin-bottom: 10px;
+}
+
 .subnav-span {
   color: white;
+}
+
+.subnav-date-wrap {
+  padding-bottom: 5px;
+  padding-right: 25px;
+  margin-bottom: 25px;
+  text-align: right;
+}
+
+.subnav-date {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: skyblue;
+  border-top: 1px solid skyblue;
+  border-bottom: 1px solid skyblue;
 }
 
 .nav-player-name {
@@ -111,6 +129,37 @@ nav span {
 
 .end-message {
   margin-bottom: 2rem !important;
+}
+
+.todo-task-date, .todone-task-date {
+  font-size: 0.6rem;
+  color: #0575E6;
+}
+
+.todo-count {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  margin-left: 15px;
+  font-size: 1.2rem;
+  text-align: center;
+  color: #4CAF50;
+  background: white;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.todone-title-wrap {
+  height: 8vh;
+  line-height: 7.5vh; /* 7.5vh */
+  padding-top: 0;
+}
+
+.todo-title, .todone-title {
+  padding-left: 10px; /* 25px */
+  font-size: 1.2rem;
+  color: white;
+  display: inline-block;
 }
 
 .todo-task-li, .todone-task-li {
@@ -398,17 +447,7 @@ nav span {
   cursor: crosshair;
 }
 
-.todone-title-wrap {
-  height: 8vh;
-  line-height: 7.5vh;
-  padding-top: 0;
-}
 
-.todone-title {
-  padding-left: 25px;
-  font-size: 1.2rem;
-  color: white;
-}
 
 
 
